<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AutoWhatsappMessage</string>
    <string name="preset_messages">Preset Messages</string>
    <string name="notification_ticker">ticker string</string>
    <string name="action_settings">Settings</string>
    <string name="delete_message">delete message</string>
    <string name="edit_message">edit message</string>
    <string name="default_application_key">default_application</string>
    <string name="auto_send">auto_send</string>
    <string name="notifications_settings_key">notifications</string>
    <string name="notification_schedule">Notification Schedule</string>
    <string name="notification_schedule_key">notificationScheduleKey</string>
    <string name="notification_id_bundle_key">notificationIdKey</string>

    <string-array
        name="messaging_applications">
        <item>Whatsapp</item>
        <item>WeChat</item>
    </string-array>

</resources>
